<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_page_background"
    android:orientation="vertical"
    tools:context="com.example.administrator.memorymusic.MVActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_home" />

        <TextView
            android:id="@+id/ranking_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_ranking" />

        <TextView
            android:id="@+id/mv_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_mv" />

        <TextView
            android:id="@+id/myMusic_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_my_music" />

        <ImageButton
            android:id="@+id/search_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:scaleType="center"
            android:src="@drawable/search" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:text="@string/song_list"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showText1"
                android:textSize="@dimen/songList_textSize"
                android:background="@color/myMusic_showText_background"/>

            <TextView
                style="@style/SubTitle"
                android:text="@string/album"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showText2"
                android:textSize="@dimen/album_textSize"
                android:background="@color/myMusic_showText_background"/>

            <TextView
                style="@style/SubTitle"
                android:text="@string/musician"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showText3"
                android:textSize="@dimen/musician_textSize"
                android:background="@color/myMusic_showText_background"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
