<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ranking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_page_background"
    android:orientation="vertical"
    tools:context="com.example.administrator.memorymusic.RankingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_home" />

        <TextView
            android:id="@+id/ranking_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_ranking" />

        <TextView
            android:id="@+id/mv_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_mv" />

        <TextView
            android:id="@+id/myMusic_activity"
            style="@style/SubjectBar"
            android:text="@string/subject_my_music" />

        <ImageButton
            android:id="@+id/search_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_white"
            android:scaleType="center"
            android:src="@drawable/search" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/SubTitle"
                android:text="@string/memory_ranking"
                android:id="@+id/textView" />

            <RelativeLayout
                style="@style/RankingRelativeLayoutStyle">

                <ImageView
                    android:id="@+id/popular_image"
                    style="@style/RankingImageStyle"
                    android:src="@drawable/popular" />

                <TextView
                    android:id="@+id/pTitle"
                    style="@style/RankingRelativeTitleStyle"
                    android:layout_toRightOf="@id/popular_image"
                    android:text="@string/popular_ranking" />

                <TextView
                    android:id="@+id/pSong1"
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/pTitle"
                    android:layout_toRightOf="@id/popular_image"
                    android:text="@string/Psong1" />

                <TextView
                    android:id="@+id/pSong2"
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/pSong1"
                    android:layout_toRightOf="@id/popular_image"
                    android:text="@string/Psong2" />

                <TextView
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/pSong2"
                    android:layout_toRightOf="@id/popular_image"
                    android:text="@string/Psong3" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/RankingRelativeLayoutStyle">

                <ImageView
                    android:id="@+id/newest_image"
                    style="@style/RankingImageStyle"
                    android:src="@drawable/newest" />

                <TextView
                    android:id="@+id/nTitle"
                    style="@style/RankingRelativeTitleStyle"
                    android:layout_toRightOf="@id/newest_image"
                    android:text="@string/new_songs_ranking"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nSong1"
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/nTitle"
                    android:layout_toRightOf="@id/newest_image"
                    android:text="@string/Nsong1"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/nSong2"
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/nSong1"
                    android:layout_toRightOf="@id/newest_image"
                    android:text="@string/Nsong2" />

                <TextView
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/nSong2"
                    android:layout_toRightOf="@id/newest_image"
                    android:text="@string/Nsong3" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/RankingRelativeLayoutStyle">

                <ImageView
                    android:id="@+id/original_image"
                    style="@style/RankingImageStyle"
                    android:src="@drawable/original" />

                <TextView
                    android:id="@+id/oTitle"
                    android:layout_toRightOf="@id/original_image"
                    android:text="@string/original_ranking"
                    style="@style/RankingRelativeTitleStyle"/>

                <TextView
                    android:id="@+id/oSong1"
                    android:layout_below="@id/oTitle"
                    android:layout_toRightOf="@id/original_image"
                    style="@style/RankingSongAndSingerStyle"
                    android:text="@string/Osong1"/>

                <TextView
                    android:id="@+id/oSong2"
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/oSong1"
                    android:layout_toRightOf="@id/original_image"
                    android:text="@string/Osong2" />

                <TextView
                    style="@style/RankingSongAndSingerStyle"
                    android:layout_below="@id/oSong2"
                    android:layout_toRightOf="@id/original_image"
                    android:text="@string/Osong3" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
